Small changes in chapter 1

--- a/example.bib
+++ b/example.bib
@@ -96,6 +96,22 @@
   %doi         = {1721.1/11173},
 }
 
+@MASTERSTHESIS{vozarovaMasterThesis,
+  author      = {Vozárová, Viktória},
+  title       = {Motion Planning for the RoFI Platform},
+  date        = {2019},
+  institution = {Fakulta informatiky Masarykovej univerzity},
+  langid      = {english},
+}
+
+@MASTERSTHESIS{nausovaBachelorThesis,
+  author      = {Naušová, Markéta},
+  title       = {Vizualizace pro robotickou platformu RoFI},
+  date        = {2019},
+  institution = {Fakulta informatiky Masarykovej univerzity},
+  langid      = {czech},
+}
+
 % EHLINGER JR., Philip Charles. Device for the treatment of hiccups. US.
 % US Patent, 7062320.
 
@@ -116,7 +132,7 @@
   %publisher = {Masaryk University},
   title     = {RoFICom Connector},
   date      = {2019},
-  url       = {http://ro.fi.muni.cz/connector/},
+  url       = {https://ro.fi.muni.cz/connector/},
   urldate   = {2019-04-13},
   location  = {Brno},
   langid    = {english}
@@ -126,7 +142,7 @@
   %publisher = {Masaryk University},
   title     = {RoFI Platform},
   date      = {2019},
-  url       = {http://ro.fi.muni.cz/},
+  url       = {https://ro.fi.muni.cz/},
   urldate   = {2019-04-13},
   location  = {Brno},
   langid    = {english}
