--- a/example.bib
+++ b/example.bib
@@ -91,24 +91,26 @@
   author      = {Mrázek, Jan},
   title       = {RoFI – Distributed Metamorphic Robots},
   date        = {2019},
-  institution = {Fakulta informatiky Masarykovej univerzity},
+  institution = {Masarykova univerzita, Fakulta informatiky, Brno},
+  SUPERVISOR = "Jiří Barnat", 
   langid      = {english},
-  %doi         = {1721.1/11173},
 }
 
 @MASTERSTHESIS{vozarovaMasterThesis,
   author      = {Vozárová, Viktória},
   title       = {Motion Planning for the RoFI Platform},
   date        = {2019},
-  institution = {Fakulta informatiky Masarykovej univerzity},
+  institution = {Masarykova univerzita, Fakulta informatiky, Brno},
+  SUPERVISOR = "Ivana Černá", 
   langid      = {english},
 }
-
-@MASTERSTHESIS{nausovaBachelorThesis,
-  author      = {Naušová, Markéta},
-  title       = {Vizualizace pro robotickou platformu RoFI},
-  date        = {2019},
-  institution = {Fakulta informatiky Masarykovej univerzity},
+@MASTERSTHESIS{nausovaBachelorThesis, 
+  AUTHOR = "Naušová, Markéta", 
+  TITLE = "Vizualizace pro robotickou platformu RoFI", 
+  YEAR = "2019", 
+  TYPE = "Bakalářská práce", 
+  SCHOOL = "Masarykova univerzita, Fakulta informatiky, Brno", 
+  SUPERVISOR = "Ivana Černá", 
   langid      = {czech},
 }
 
