--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -232,6 +232,9 @@ Samotný modul nepozná celú konfiguráciu RoFIbota (dokonca pri veľkých konf
 
 \section{Formálna špecifikácia konfigurácie}
 \label{sec:inputOutput}
+--- poznamky
+
+
 Navrhnuté vstupné a výstupné údaje konfigurácie RoFIbota a prípustných akcii na rekonfiguráciu sú prevzaté z diplomovej práce \textit{Motion Planning for the RoFI Platform} \cite{vozarovaMasterThesis}. 
 
 \cite{nausovaBachelorThesis}
