clean up bib and rename it

--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -67,7 +67,7 @@
     thanks        = {These are the acknowledgements for my thesis, which can
 
                      span multiple paragraphs.},
-    bib           = example.bib,
+    bib           = bibliography.bib,
 }
 \usepackage{makeidx}      %% The `makeidx` package contains
 \makeindex                %% helper commands for index typesetting.
