--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -95,11 +95,13 @@
 
 \chapter{Popis platformy RoFI}
 \label{sec:platform}
-RoFI je modulárna robotická platforma, ktorá vzniká na pôde Fakulty informatiky Masarykovej univerzity v laboratóriu ParaDiSe\footnote{Laboratoř paralelních a distribuovaných systémů (stránka laboratória: \url{https://paradise.fi.muni.cz/})}. Táto platforma zastrešuje vývoj modulárnych robotov a iného príslušenstva po ich hardvérovej, ale aj softvérovej stránke na rôznych úrovniach. 
+RoFI je modulárna robotická platforma, ktorá vzniká na pôde Fakulty informatiky Masarykovej univerzity v laboratóriu ParaDiSe\footnote{skratka pre Laboratoř paralelních a distribuovaných systémů (stránka laboratória: \url{https://paradise.fi.muni.cz/})}. Táto platforma zastrešuje vývoj modulárnych robotov a iného príslušenstva po ich hardvérovej, ale aj softvérovej stránke na rôznych úrovniach. 
 
 Primárnym cieľom platformy RoFI je vytvorenie modulárnych robotov, ktoré je možné využiť na rôzne úlohy. Príkladom sú úlohy ako prechádzanie cez úzke priestory, prekonávanie prekážok a podobne. 
 
-Ich dizajn je navrhovaný tak, aby bolo jednoduché a nie príliš finančne náročné ich fyzicky skonštruovať. Softvérové vybavenie pokrýva široké spektrum požiadaviek modulárnych robotov a je jednoduché na prácu aj menej skúseným užívateľom. Zároveň je platforma navrhnutá tak, aby bola ľahko rozšíriteľná o dodatočné periférie a pasívne prvky. 
+Ich dizajn je navrhovaný tak, aby bolo jednoduché a nie príliš finančne náročné ich fyzicky skonštruovať. Softvérové vybavenie pokrýva široké spektrum požiadaviek modulárnych robotov a je jednoduché na prácu aj menej skúseným užívateľom. 
+
+Platforma je navrhnutá tak, aby bola ľahko rozšíriteľná o dodatočné periférie a pasívne prvky. Celý vývoj prebieha ako open-source projekt prístupný na \url{https://github.com/paradise-fi/RoFI}.  
 
 Základnou jednotkou platformy RoFI sú moduly \cite{mrazekMasterThesis}, ktoré sú schopné sa vzájomne fyzicky prepojiť a zároveň medzi sebou komunikovať \cite{rofiCom}. Okrem toho sa každý modul dokáže pripojiť aj na pasívne prvky. 
 
@@ -109,12 +111,12 @@ Pre účel tejto práce je v kapitole \ref{sec:moduleSpec} popísaná iba časť
 
 \section{Formálna špecifikácia modulov}
 \label{sec:moduleSpec}
-Modul platformy RoFI bol navrhnutý tak, aby bol tzv. \textit{lattice type}\footnote{každý modul je umiestnený v pravidelnej 3D mriežke} a zároveň má vlastnosť \textit{grid-awareness}\footnote{pri pohybe modulu zasahuje modul do najnižšieho počtu polí mriežky}. V súčasnej dobe je platforma RoFI prispôsobená na mriežku s veľkosťou 10\,cm. Podrobný popis vlastností sa nachádza v diplomovej práci \textit{RoFI – Distributed Metamorphic Robots} \cite{mrazekMasterThesis}. 
+Modul platformy RoFI bol navrhnutý tak, aby bol tzv. \textit{lattice type}\footnote{každý modul je umiestnený v pravidelnej 3D mriežke} a zároveň má vlastnosť \textit{grid-awareness}\footnote{pri pohybe modulu zasahuje modul do najnižšieho počtu polí mriežky}. V súčasnej dobe je platforma RoFI prispôsobená na mriežku s veľkosťou 10\,cm. Podrobný popis vlastností modulu sa nachádza v diplomovej práci \textit{RoFI – Distributed Metamorphic Robots} \cite{mrazekMasterThesis}. 
 
 \begin{figure}[hbt!]
     \centering
     \includegraphics[width=0.6\textwidth]{pictures/module.jpg}
-    \caption[Fotografia modulu]{Fotografia univerzálneho modulu \cite{rofiWeb}.}
+    \caption[Fotografia modulu]{Fotografia modulu \cite{rofiWeb}. TODO - univerzálny}
     \label{fig:module}
 \end{figure}
 
@@ -127,7 +129,7 @@ Každý z modulov sa skladá z dvoch častí (\textit{side A} a \textit{side B})
     \label{fig:module_parts}
 \end{figure}
 
-Moduly majú schopnosť sa pohybovať, a to vďaka až trom stupňom voľnosti. Prvé dva z nich umožňujú pohybovať so \textit{shoe} časťou modulu. Konkrétne ide o pohyb okolo osí označovaných ako $\alpha$ a $\beta$  o uhol v rozsahu $\interval[{-90\degree, 90\degree}]$. Posledným stupňom voľnosti je pohyb okolo osi označovanej ako $\gamma$. Tento pohyb umožňuje otáčaním meniť vzájomnú polohu \textit{body} častí modulu a jeho rozsah je $\interval({-180\degree, 180\degree}]$. 
+Moduly majú schopnosť pohybovať sa, a to vďaka až trom stupňom voľnosti. Prvé dva z nich umožňujú pohybovať so shoe časťou modulu. Konkrétne ide o pohyb okolo osí označovaných ako $\alpha$ a $\beta$  o uhol v rozsahu $\interval[{-90\degree, 90\degree}]$. Posledným stupňom voľnosti je pohyb okolo osi označovanej ako $\gamma$. Tento pohyb umožňuje otáčaním meniť vzájomnú polohu body častí modulu a jeho rozsah je $\interval({-180\degree, 180\degree}]$. 
 
 \begin{figure}[hbt!]
     \centering
@@ -136,9 +138,7 @@ Moduly majú schopnosť sa pohybovať, a to vďaka až trom stupňom voľnosti. 
     \label{fig:module_angle}
 \end{figure}
 
-Ako bolo spomenuté vyššie, tak každý modul má schopnosť pripojiť sa k iným modulom (a vytvoriť tak RoFIbotov) alebo k pasívnym prvkom pomocou dockov. Dockovací systém platformy RoFI je navrhnutý ako tzv. \textit{genderless}, čo umožňuje vzájomné spojenie ľubovoľných dvoch dockov. 
-
-Každý modul obsahuje práve šesť dockov, ktoré sú rozmiestnené po tri na každej \textit{shoe} modulu. Dock je okrem svojej polohy na module definovaný aj orientačným vektorom (viď obrázok \ref{fig:dock_desc}). 
+Ako bolo spomenuté vyššie, tak každý modul má schopnosť pripojiť sa k iným modulom (a vytvoriť tak RoFIbotov) alebo k pasívnym prvkom pomocou \textit{dock}ov. Dockovací systém platformy RoFI je navrhnutý ako tzv. \textit{genderless}, čo umožňuje vzájomné spojenie ľubovoľných dvoch dockov. 
 
 \begin{figure}[hbt!]
     \centering
@@ -146,6 +146,8 @@ Každý modul obsahuje práve šesť dockov, ktoré sú rozmiestnené po tri na 
     \caption[Docky modulu]{Schéma umiestnení dockov na module a ich označenia. Šípky na dockoch znázorňujú orientačné vektory \cite{mrazekMasterThesis}.}
     \label{fig:dock_desc}
 \end{figure}
+
+Každý modul obsahuje práve šesť dockov, ktoré sú rozmiestnené po tri na každej shoe časti modulu. Dock je okrem svojej polohy na module definovaný aj orientačným vektorom (viď obrázok \ref{fig:dock_desc}). 
 
 Prepojenie je definované vzájomnou polohou orientačných vektorov dockov spojenia. Konštrukcia dockov dovoľuje ich prepojenie až v štyroch rôznych polohách. 
 
@@ -178,11 +180,11 @@ Vzájomné prepojenie modulov pomocou dockov vytvára RoFIbotov. Parametre RoFIb
 
 Každý modul v konfigurácii RoFIbota je definovaný jedinečným identifikátorom modulu a hodnotami všetkých troch stupňov voľnosti modulu. 
 
-Jednotlivé hrany (prepojenia) v konfigurácii RoFIbota sú definované identifikátormi spojených modulov a presným popisom dockov, ktorými sú prepojené a vzájomnou polohou spojených dockov. 
+Jednotlivé hrany (prepojenia) v konfigurácii RoFIbota sú definované identifikátormi spojených modulov a presným popisom dockov, ktorými sú prepojené, a vzájomnou polohou spojených dockov. 
 
 Formálne značenie všetkých parametrov konfigurácie a ich rozsahy sú zavedené v kapitole \ref{sec:inputOutput}. 
 
-\textit{Rekonfigurácia} RoFIbota je postupnosť validných krokov (ich zoz\-nam a formálna definícia sa nachádza v kapitole \ref{sec:reconfigActions}), ktorá umožní zmeniť počiatočnú konfiguráciu RoFIbota na cieľovú konfiguráciu RoFIbota. 
+\textit{Rekonfigurácia} RoFIbota je postupnosť validných krokov (ich zoz\-nam a formálna definícia sa nachádzajú v kapitole \ref{sec:reconfigActions}), ktorá umožní zmeniť počiatočnú konfiguráciu RoFIbota na cieľovú konfiguráciu RoFIbota. 
 
 \section{Formulácia problému}
 \label{sec:restrictions}
@@ -195,6 +197,8 @@ Každý RoFIbot vykonáva svoju rekonfiguráciu „vo vákuu“, bez fyzických 
 Zároveň musí platiť, že v každom kroku rekonfigurácie musí byť RoFIbot vo validnej konfigurácii, čo napríklad značí, že nesmie dôjsť ku kolíziám modulov (konkrétny popis v kapitole \ref{sec:reconfigActions}). 
 
 Keďže komunikácia medzi modulmi môže prebiehať po fyzickom spojení pomocou dockov, ale aj bezdrôtovo, tak si zadefinujeme spojitosť RoFIbota. 
+
+RoFIbot je \textit{spojitý}, ak medzi akýmikoľvek jeho dvomi modulmi existuje cesta tvorená modulmi a prepojeniami. To značí, že komunikácia medzi akýmikoľvek dvomi modulmi spojitého RoFIbota môže prebiehať výhradne fyzickými spojeniami (viď príklad spojitej a nespojitej konfigurácie na obrázku \ref{fig:exampleCfg}). 
 
 \begin{figure}[hbt!]
     \centering
@@ -212,8 +216,6 @@ Keďže komunikácia medzi modulmi môže prebiehať po fyzickom spojení pomoco
     \label{fig:exampleCfg}
 \end{figure}
 
-RoFIbot je \textit{spojitý}, ak medzi akýmikoľvek jeho dvomi modulmi RoFIbota existuje cesta tvorená modulmi a prepojeniami. To značí, že komunikácia medzi akýmikoľvek dvomi modulmi spojitého RoFIbota môže prebiehať výhradne fyzickými spojeniami (viď príklad spojitej a nespojitej konfigurácie na obrázku \ref{fig:exampleCfg}). 
-
 V rámci tejto práce je zavedený predpoklad, že RoFIbot, ktorý sa rekonfiguruje, je v počiatočnej konfigurácii, počas celého procesu rekonfigurácie, ale aj v cieľovej konfigurácii spojitý. 
 
 \chapter{Distribuované algoritmy}
@@ -228,26 +230,60 @@ Distribuované algoritmy na rekonfiguráciu sú navrhnuté tak, aby každý z mo
 
 Samotný modul nepozná celú konfiguráciu RoFIbota (dokonca pri veľkých konfiguráciách by znalosť celej konfigurácie mohla zberať veľa miesta v pamäti a nebola by potrebná). V tejto práci má každý modul znalosť výhradne o svojom stave. Každý ďalší údaj o stave iných modulov vie získať výhradne posielaním si správ. 
 
-\textit{Stav modulu} je tvorený nasledujúcimi údajmi: unikátny identifikátor modulu, aktuálne hodnoty natočenia stupňov voľnosti modulu a kompletná informácia o všetkých prepojeniach daného modulu. 
-
-\section{Formálna špecifikácia konfigurácie}
+\section{Formálna špecifikácia modulu a konfigurácie}
 \label{sec:inputOutput}
---- poznamky
+\textit{Stav modulu} je tvorený nasledujúcimi údajmi: 
+\begin{itemize}
+    \item \textit{id} -- unikátny identifikátor modulu, 
+    \item $\alpha$ -- uhol otočenia shoe A voči body A v rozsahu $\interval[{-90\degree, 90\degree}]$,
+    \item $\beta$ -- uhol otočenia shoe B voči body B v rozsahu $\interval[{-90\degree, 90\degree}]$,
+    \item $\gamma$ -- uhol otočenia body A voči body B v rozsahu $\interval({-180\degree, 180\degree}]$,
+    \item sedmice o každom prepojení, ktoré daný modul má. 
+\end{itemize} 
 
-Navrhnuté vstupné a výstupné údaje konfigurácie RoFIbota a prípustných akcií na rekonfiguráciu sú prevzaté z diplomovej práce \textit{Motion Planning for the RoFI Platform} \cite{vozarovaMasterThesis}. 
+Ako už bolo popísané v kapitole \ref{sec:moduleSpec}, tak spojenie definujú docky, ktorými sú moduly spojené, a ich vzájomná poloha. Formálne ide o nasledujúcu sedmicu: 
+\begin{itemize}
+    \item \textit{id1} -- unikátny identifikátor prvého modulu, 
+    \item \textit{side1} -- strana prvého modulu, ktorou je spojený s druhým modulom, 
+    \item \textit{dock1} -- dock prvého modulu, ktorý sa podieľa na prepojení,
+    \item \textit{ori} -- orientácia spojených dockov,
+    \item \textit{dock2} -- dock druhého modulu, ktorý sa podieľa na prepojení,
+    \item \textit{side2} -- strana druhého modulu, ktorou je spojený s prvým modulom, 
+    \item \textit{id2} -- unikátny identifikátor druhého modulu. 
+\end{itemize}
+Zároveň platí, že tieto hodnoty sú z množín: $side1, side2 \in \{A, B\}$; $dock1, dock2 \in \{X+, X-, Z-\}$; $ori \in \{N, E, S, W\}$. 
 
-\cite{nausovaBachelorThesis}
+Každý modul v spojitom RoFIbote, ktorý sa má rekonfigurovať, dostane na vstup svoj aktuálny (počiatočný) stav a zároveň aj svoj koncový stav. 
 
-vstupné a výstupné údaje + kompatibilita s vizualizérom
+Predpokladá sa, že údaje, ktoré dostanú moduly sú validné. To znamená, že údaje sú z popísaných rozsahov a množín. Každá hrana je definovaná pre oba prepojené moduly a to v rovnakom tvare. Zároveň, že konfigurácia RoFIbota, ktoré popisujú dané stavy modulov je spojitá a validná. Toto platí ako pre počiatočné aj pre koncové stavy. 
+
+Konfigurácia RoFIbota je \textit{validná} ak: 
+\begin{itemize}
+    \item každé prepojenie je vzájomné,
+    \item každý dock každého modulu sa podieľa na maximálne jednom prepojení, 
+    \item všetky definované prepojenia je možné vytvoriť, 
+    \item nesmie dochádzať k žiadne fyzickej kolízii modulov. 
+\end{itemize}
+Formálny popis výpočtu kolízií v konfigurácii RoFIbota je podrobnejšie popísaný v diplomovej práci \textit{Motion Planning for the RoFI Platform} \cite{vozarovaMasterThesis}. 
+
+Výstup výpočtu z pohľadu jedného modulu je fyzická kroková zmena stavu z počiatočného do koncového s prihliadnutím na rekonfigurovanie ostatných modulov RoFIbota. Z pohľadu celého programu ide o postupnosť akcií označených poradovým číslom, v ktorom  kroku rekonfigurácie sa má daná akcia vykonať (ich zoznam a formálny popis sa nachádza v kapitole \ref{sec:reconfigActions}). 
+
+V prípade, že RoFIbot sa nedokáže rekonfigurovať z počiatočnej konfigurácie do koncovej, tak algoritmy túto skutočnosť dokážu identifikovať. 
 
 \section{Špecifikácia rekonfigurácie RoFIbota}
 \label{sec:reconfigActions}
-
+povolene akcie na zmeny
+komunikacia podla sprav
 
 \chapter{Implementácia}
 \label{sec:implementation}
+Platforma RoFI, ako už bolo spomenuté v kapitole \ref{sec:platform}, je open-source projekt. Časť RoFILib\footnote{\url{https://github.com/paradise-fi/RoFI/tree/master/RoFILib}} sa zaoberá vývojom simulácií a vizualizácie, kde patrí aj implementačná časť tejto práce. 
+
 \section{Technická špecifikácia a využité knižnice}
 \label{sec:libraries}
+Implementované algoritmy sú plne kompatibilné so vstupnými a výstupnými súbormi pre platformu RoFI. Vstupné a výstupné súbory a aj typy prístupných akcií na rekonfiguráciu sú prevzaté z diplomovej práce \textit{Motion Planning for the RoFI Platform} \cite{vozarovaMasterThesis}. 
+
+kompatibilita s vizualizerom \cite{nausovaBachelorThesis}. 
 \section{Popis algoritmov na rekonfiguráciu}
 \label{sec:algoDesc}
 \subsection{Centralizovane-distribuovaný algoritmus - //TODO premenovat}
