Fix bugs in chapter 3 and 3.1

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -42,3 +42,11 @@
   location  = {Brno},
   langid    = {english}
 }
+
+@ONLINE{openMPILibrary,
+  title     = {Open MPI}, 
+  date      = {2019-04-15}, 
+  url       = {https://www.open-mpi.org/}, 
+  urldate   = {2019-05-01}, 
+  langid    = {english}
+}
